@@ -779,7 +779,7 @@ define(['app'], function (app) {
 		  $("#dialog-editdistancedevice" ).dialog( "open" );
 		}
 
-		EditMeterDevice = function(idx,name,description,switchtype,valuequantity,valueunits)
+		EditMeterDevice = function(idx,name,description,switchtype,meteroffset,valuequantity,valueunits)
 		{
 			if (typeof $scope.mytimer != 'undefined') {
 				$interval.cancel($scope.mytimer);
@@ -789,6 +789,7 @@ define(['app'], function (app) {
 		  $("#dialog-editmeterdevice #devicename").val(unescape(name));
 		  $("#dialog-editmeterdevice #devicedescription").val(unescape(description));
 		  $("#dialog-editmeterdevice #combometertype").val(switchtype);
+		  $("#dialog-editmeterdevice #meteroffset").val(meteroffset);
 		  $("#dialog-editmeterdevice #valuequantity").val(unescape(valuequantity));
 		  $("#dialog-editmeterdevice #valueunits").val(unescape(valueunits));
 		  $("#dialog-editmeterdevice #metertable #customcounter").hide();
@@ -1432,7 +1433,7 @@ define(['app'], function (app) {
 							xhtm+='<a class="btnsmall" onclick="EditUtilityDevice(' + item.idx + ',\'' + escape(item.Name) + '\',\'' + escape(item.Description) + '\');" data-i18n="Edit">Edit</a> ';
 						}
 						else {
-							xhtm+='<a class="btnsmall" onclick="EditMeterDevice(' + item.idx + ',\'' + escape(item.Name) + '\',\'' + escape(item.Description) + '\', ' + item.SwitchTypeVal + ',\'' + escape(item.ValueQuantity) + '\',\'' + escape(item.ValueUnits) + '\');" data-i18n="Edit">Edit</a> ';
+							xhtm+='<a class="btnsmall" onclick="EditMeterDevice(' + item.idx + ',\'' + escape(item.Name) + '\',\'' + escape(item.Description) + '\', ' + item.SwitchTypeVal + ',' + item.AddjValue + ',\'' + escape(item.ValueQuantity) + '\',\'' + escape(item.ValueUnits) + '\');" data-i18n="Edit">Edit</a> ';
 						}
 					}
 				  }
@@ -1903,6 +1904,7 @@ define(['app'], function (app) {
 				  var meterType=$("#dialog-editmeterdevice #combometertype").val();
 				  bValid = bValid && checkLength( $("#dialog-editmeterdevice #devicename"), 2, 100 );
 				  if ( bValid ) {
+					  var meteroffset = $("#dialog-editmeterdevice #meteroffset").val();
 					  if (meterType==3) //Counter
 					  {
 						devOptions.push("ValueQuantity:");
@@ -1919,6 +1921,7 @@ define(['app'], function (app) {
 							'&name=' + encodeURIComponent($("#dialog-editmeterdevice #devicename").val()) + 
 							'&description=' + encodeURIComponent($("#dialog-editmeterdevice #devicedescription").val()) + 
 							'&switchtype=' + meterType + 
+							'&addjvalue=' + meteroffset +
 							'&used=true' +
 							'&options=' + btoa(encodeURIComponent(devOptionsParam.join(''))), // encode before b64 to prevent from character encoding issue
 						 async: false, 
