@@ -54,6 +54,10 @@
             <!--#embed metertypes -->
           </select></td>
 		</tr>
+		<tr id="tdmeteroffset">
+          <td align="right"><label for="meteroffset"><span data-i18n="Meter Offset">Meter Offset</span>: </label></td>
+          <td><input type="text" id="meteroffset" style="width: 120px; padding: .4em;" class="text ui-widget-content ui-corner-all" /></td>
+		</tr>
         <tr id="customcounter">
           <td align="right"><label for="valuequantity"><span data-i18n="Value Quantity (e.g. Weight)">Value Quantity (e.g. Weight)</span>: </label></td>
           <td><input type="text" id="valuequantity" style="width: 140px; padding: .4em;" class="text ui-widget-content ui-corner-all" /></td>
