@@ -14,6 +14,7 @@ Version 3.xxxx (August xx 2016)
 - Implemented: OpenZWave, Aeotec ZWave+ USB Controller, Enable/Disable blinking mode (@Schmart, Thanks for the magic codes!)
 - Implemented: OpenZWave, Node table, now also displays Manufacturer, Product ID and Product Type
 - Implemented: OpenZWave, When including Thermostat Setpoints, the zwave Label will be used as Name by default
+- Implemented: RFXMeter, Option to specify meter offset
 - Implemented: P1 Electra Report, Now also displaying the counters for Return
 - Implemented: RFLink: Displaying firmware version in the hardware setup
 - Implemented: RFXCom, Blinds T12 (Confexx)
